Added more projects

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <legend>About me</legend>
     </fieldset>
     <fieldset id="projects">
-      <legend>Projects I've worked on</legend>
+      <legend>Major completed projects</legend>
       <a href="http://eis.jonathanlam.tech" target="_blank" class="project">
         <div class="projectInfo">
           <h3>Everything is Sheep</h3>
@@ -37,6 +37,38 @@
           <p>The joys and pains of a high-school career</p>
         </div>
         <img class="projectImage" src="img/the-homework-life.png">
+      </div>
+      <a href="https://saferideser9.org" target="_blank" class="project">
+        <div class="projectInfo">
+          <h3>Safe Rides of ER9</h3>
+          <p>saferideser9.org</p>
+          <p>A mobile web-app for the Safe Rides program in the ER9 region for high schoolers</p>
+        </div>
+        <img class="projectImage" src="img/safe-rides-er9.png">
+      </div>
+        <a href="http://jonathanlam.tech/ringtune-website" target="_blank" class="project">
+        <div class="projectInfo">
+          <h3>RingTune</h3>
+          <p>jonathanlam.tech/ringtune-website</p>
+          <p>Make music based on statistics of pleasing chord progressions. “The type prediction for music.” Most Entrepreneurial hack of LIHacks 2015. Assets and design headed by @all88keys</p>
+        </div>
+        <img class="projectImage" src="img/ringtune.png">
+      </div>
+      <a href="http://jonathanlam.tech/nutmegbowl" target="_blank" class="project">
+        <div class="projectInfo">
+          <h3>Nutmeg Bowl (mockup)</h3>
+          <p>jonathanlam.tech/nutmegbowl</p>
+          <p>An mockup of the Nutmeg Bowl website as a proposed update to theirs. Currently pending (?)</p>
+        </div>
+        <img class="projectImage" src="img/nutmeg-bowl.png">
+      </div>
+      <a href="http://fruitsensei.tech" target="_blank" class="project">
+        <div class="projectInfo">
+          <h3>Fruit Sensei</h3>
+          <p>fruitsensei.tech</p>
+          <p>A revamp of the popular Fruit Ninja mobile videogame. Use a phone as a controller and play in 3D! Best Videogame of StuyHacks 2017</p>
+        </div>
+        <img class="projectImage" src="img/fruit-sensei.png">
       </div>
     </fieldset>
   </body>
