--- a/test.html
+++ b/test.html
@@ -1,13 +1,9 @@
-<iframe src="http://eis.jonathanlam.tech" width="500" height="500" scrolling="no"></iframe>
+<iframe src="http://fruitsensei.tech" width="500" height="500" scrolling="no"></iframe>
 <style>
   body, html, iframe {
     margin: 0;
     padding: 0;
     overflow: hidden;
     border: none;
-    background-color: white;
-  }
-  body, html {
-    background-color: green;
   }
 </style>
