added some description

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <div id="terminal"><strong>jon@life:~$</strong> <span id="dynamicTerminal"></span><span id="cursor">&#9608;</span></div>
     <fieldset id="about">
       <legend>About me</legend>
+      <p>Hi! My name is Jonathan Lam. I'm a big fan of writing code, solving Rubik's cubes, and bowling.</p>
+      <p>More will show up here soon&hellip;</p>
     </fieldset>
     <fieldset id="projects">
       <legend>Major completed projects</legend>
