added profile image

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="jonathan lam, programmer, hacker, mathematician, rubiks cubing">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Jonathan Lam</title>
+    <link rel="icon" type="img/x-icon" href="./favicon.ico">
     <link rel="stylesheet" href="./css/mobile.css">
     <link rel="stylesheet" href="./css/desktop.css" media="screen and (min-width: 1000px)">
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,500" rel="stylesheet">
@@ -15,7 +16,7 @@
     <script src="./js/main.js"></script>
   </head>
   <body>
-    <h1 id="title">Jonathan Lam</h1>
+    <h1 id="title"><img src="img/jon.png" id="profileImage"> Jonathan Lam</h1>
     <div id="terminal"><strong>jon@life:~$</strong> <span id="dynamicTerminal"></span><span id="cursor">&#9608;</span></div>
     <fieldset id="about">
       <legend>About me</legend>
@@ -23,7 +24,7 @@
       <p>More will show up here soon&hellip;</p>
     </fieldset>
     <fieldset id="projects">
-      <legend>Major completed projects</legend>
+      <legend>Major projects</legend>
       <a href="http://eis.jonathanlam.tech" target="_blank" class="project">
         <div class="projectInfo">
           <h3>Everything is Sheep</h3>
