migrated over information from old site

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <fieldset id="about">
       <legend>About me</legend>
       <p>Hi! My name is Jonathan Lam. I'm a big fan of writing code, solving Rubik's cubes, and bowling.</p>
-      <p>More will show up here soon&hellip;</p>
+      <p>This is a new personal webpage created on 12/02/17. More will show up here soon. Much of this information has been copied directly over from the old, Jekyll-themed blog. Sorry for the appearance.</p>
     </fieldset>
     <fieldset id="projects">
       <legend>Major projects</legend>
@@ -32,7 +32,7 @@
           <p>A playground for free-form teenage writing</p>
         </div>
         <img class="projectImage" src="img/everything-is-sheep.png">
-      </div>
+      </a>
       <a href="http://thehomeworklife.co.nf" target="_blank" class="project">
         <div class="projectInfo">
           <h3>The Homework Life</h3>
@@ -40,7 +40,7 @@
           <p>The joys and pains of a high-school career</p>
         </div>
         <img class="projectImage" src="img/the-homework-life.png">
-      </div>
+      </a>
       <a href="https://saferideser9.org" target="_blank" class="project">
         <div class="projectInfo">
           <h3>Safe Rides of ER9</h3>
@@ -48,15 +48,15 @@
           <p>A mobile web-app for the Safe Rides program in the ER9 region for high schoolers</p>
         </div>
         <img class="projectImage" src="img/safe-rides-er9.png">
-      </div>
-        <a href="http://jonathanlam.tech/ringtune-website" target="_blank" class="project">
+      </a>
+      <a href="http://jonathanlam.tech/ringtune-website" target="_blank" class="project">
         <div class="projectInfo">
           <h3>RingTune</h3>
           <p>jonathanlam.tech/ringtune-website</p>
           <p>Make music based on statistics of pleasing chord progressions. “The type prediction for music.” Most Entrepreneurial hack of LIHacks 2015. Assets and design headed by @all88keys</p>
         </div>
         <img class="projectImage" src="img/ringtune.png">
-      </div>
+      </a>
       <a href="http://jonathanlam.tech/nutmegbowl" target="_blank" class="project">
         <div class="projectInfo">
           <h3>Nutmeg Bowl (mockup)</h3>
@@ -64,7 +64,7 @@
           <p>An mockup of the Nutmeg Bowl website as a proposed update to theirs. Currently pending (?)</p>
         </div>
         <img class="projectImage" src="img/nutmeg-bowl.png">
-      </div>
+      </a>
       <a href="http://fruitsensei.tech" target="_blank" class="project">
         <div class="projectInfo">
           <h3>Fruit Sensei</h3>
@@ -72,7 +72,29 @@
           <p>A revamp of the popular Fruit Ninja mobile videogame. Use a phone as a controller and play in 3D! Best Videogame of StuyHacks 2017</p>
         </div>
         <img class="projectImage" src="img/fruit-sensei.png">
-      </div>
+      </a>
+    </fieldset>
+    <fieldset>
+      <legend>Smaller and incomplete projects</legend>
+      <p>This was copied over from the old blog. I will soon also be migrating over projects from THL. Pardon the appearance.</p>
+      <ul>
+        <li><a href="http://jonathanlam.tech/paste-to-html"><strong>Paste to HTML</strong></a> · To convert pasted webpage data into its HTML, along with its full formatting.</li>
+        <li><a href="http://jonathanlam.tech/word-visualizer"><strong>Word Visualizer</strong></a> · A tool for creating images of words. Highly customizable and colorful, with a stylish interface.</li>
+        <li><a href="http://jonathanlam.tech/unscrambler"><strong>Word Unscrambler</strong></a> · A tool that unscrambles words or finds anagrams. Uses <a href="https://github.com/dwyl/english-words">english-words</a> as source of words.</li>
+        <li><a href="http://jonathanlam.tech/scrambler"><strong>Rubik’s Cube Scrambler</strong></a> · A random Rubik’s cube scrambler. Don’t use for competition; not an official algorithm. Simple, modern interface (with WallE background).</li>
+        <li><a href="http://jonathanlam.tech/pop-the-lock"><strong>Pop the Lock</strong></a> · A minimalistic Pop the Lock imitation. Uses CSS3 for animations and circles, and JS for scoring.</li>
+        <li><a href="http://jonathanlam.tech/realcodingtime"><strong>Real Coding Time</strong></a> · A real-time coding editor that is open to anyone. Uses Google’s PrettyPrint library for syntax highlighting. JS and Node.JS (with Socket.io) involved.</li>
+        <li><a href="http://jonathanlam.tech/periodic-letters"><strong>Periodic Letters</strong></a> · A tool to generate graphics with text from the periodic elements. Created for Honors Chemistry project. Two imaginary elements added to make up for holes.</li>
+        <li><a href="http://jonathanlam.tech/balencistry"><strong>Balencistry</strong></a> · A chemical equation balancer for Honors Chemistry (and now AP Chemistry).</li>
+        <li><a href="http://jonathanlam.tech/memory-game"><strong>Memory Game</strong></a> · A memory game with customizable size and clean interface. With lots of love from CSS3 transitions and animations.</li>
+        <li><a href="http://jonathanlam.tech/speller"><strong>Speller</strong></a> · A spelling-bee training aid. Currently comes packaged with 450 middle-school challenge terms by default.</li>
+        <li><a href="http://jonathanlam.tech/flappy"><strong>Flappy</strong></a> · My cheap Flappy Bird ripoff. Created with JS and HTML5 canvas.</li>
+        <li><a href="http://jonathanlam.tech/planetary"><strong>Planetary</strong></a> · A simple jQuery animation inspired by <a href="https://www.github.com/huntrr">@huntrr</a>.</li>
+      </ul>
+    </fieldset>
+    <fieldset>
+      <legend>Contact me</legend>
+      <p>Contact info (and maybe online profiles?) will go here soon.</p>
     </fieldset>
   </body>
 </html>
