updated link and image sizes

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <img class="projectImage" src="img/the-homework-life.png">
       </a>
-      <a href="https://saferideser9.org" target="_blank" class="project">
+      <a href="https://www.saferideser9.org" target="_blank" class="project">
         <div class="projectInfo">
           <h3>Safe Rides of ER9</h3>
           <p>saferideser9.org</p>
