updated site with more modern feel

--- a/index.html
+++ b/index.html
@@ -9,19 +9,18 @@
     <title>Jonathan Lam</title>
     <link rel="icon" type="img/x-icon" href="./favicon.ico">
     <link rel="stylesheet" href="./css/mobile.css">
-    <link rel="stylesheet" href="./css/desktop.css" media="screen and (min-width: 1000px)">
+    <link rel="stylesheet" href="./css/desktop.css" media="screen and (min-width: 800px)">
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,500" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:300" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="./js/main.js"></script>
   </head>
   <body>
-    <h1 id="title"><img src="img/jon.png" id="profileImage"> Jonathan Lam</h1>
+    <h1 id="title"><img src="img/jon.jpg" id="profileImage"> Jonathan Lam</h1>
     <div id="terminal"><strong>jon@life:~$</strong> <span id="dynamicTerminal"></span><span id="cursor">&#9608;</span></div>
     <fieldset id="about">
       <legend>About me</legend>
-      <p>Hi! My name is Jonathan Lam. I'm a big fan of writing code, solving Rubik's cubes, and bowling.</p>
-      <p>This is a new personal webpage created on 12/02/17. More will show up here soon. Much of this information has been copied directly over from the old, Jekyll-themed blog. Sorry for the appearance.</p>
+      <p>Hi! My name is Jonathan Lam (you may have seen me around under the name jlam55555 or Lambda Ninja). I'm a big fan of writing code, solving Rubik's cubes, and bowling. Here are some major programming projects I've worked on. More to come soon.</p>
     </fieldset>
     <fieldset id="majorProjects">
       <legend>Major projects</legend>
@@ -32,11 +31,12 @@
     </fieldset>
     <fieldset>
       <legend>Contact me</legend>
-      <p>Ask questions to me on StackOverflow, view my fiddles, or compete with me on CodeWars or Project Euler. Contact me at <a href="mailto:jonathanlamdev@gmail.com">jonathanlamdev@gmail.com</a>.</p>
+      <p>Ask questions to me on StackOverflow, view my fiddles, view my GitHub, or compete with me on CodeWars or Project Euler. Contact me at <a href="mailto:jonathanlamdev@gmail.com">jonathanlamdev@gmail.com</a>.</p>
       <a href="https://stackoverflow.com/users/2397327/lambda-ninja" class="profileBadge">
         <img src="https://stackexchange.com/users/flair/2785906.png">
       </a>
       <a href="http://jsfiddle.net/user/jlam55555/" class="profileBadge">View my JSFiddles</a>
+      <a href="https://github.com/jlam55555" class="profileBadge">View my GitHub</a>
       <a href="https://www.codewars.com/users/jlam55555/" class="profileBadge">
         <img src="https://www.codewars.com/users/jlam55555/badges/micro">
       </a>
