Further changed styling between desktop and mobile

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <h1 id="title"><img src="img/jon.jpg" id="profileImage"> Jonathan Lam</h1>
-    <div id="terminal"><strong>jon@life:~$</strong> <span id="dynamicTerminal"></span><span id="cursor">&#9608;</span></div>
+    <div id="terminal"><strong><span id="greenPrompt">jon@life</span>:<span id="bluePrompt">~</span>$ <span id="dynamicTerminal"></span><span id="cursor">&#9608;</span></strong></div>
     <fieldset id="about">
       <legend>About me</legend>
       <p>Hi! My name is Jonathan Lam (you may have seen me around under the name jlam55555 or Lambda Ninja). I'm a big fan of writing code, solving Rubik's cubes, and bowling. Here are some major programming projects I've worked on. More to come soon.</p>
