Added fontawesome, fixed minorprojects padding

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/desktop.css" media="screen and (min-width: 800px)">
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,500" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:300" rel="stylesheet">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="./js/main.js"></script>
   </head>
@@ -29,19 +30,23 @@
       <legend>Smaller and incomplete projects</legend>
       <p>This was copied over from the old blog. I will soon also be migrating over projects from THL. Pardon the appearance.</p>
     </fieldset>
-    <fieldset>
+    <fieldset id="contact">
       <legend>Contact me</legend>
       <p>Ask questions to me on StackOverflow, view my fiddles, view my GitHub, or compete with me on CodeWars or Project Euler. Contact me at <a href="mailto:jonathanlamdev@gmail.com">jonathanlamdev@gmail.com</a>.</p>
-      <a href="https://stackoverflow.com/users/2397327/lambda-ninja" class="profileBadge">
-        <img src="https://stackexchange.com/users/flair/2785906.png">
+      <a href="https://stackoverflow.com/users/2397327/lambda-ninja" class="profileBadge" title="Stack Overflow" target="_blank">
+        <i class="fab fa-stack-overflow fa-4x socialMedia" data-fa-transform="shrink-5" data-fa-mask="fas fa-circle"></i>
       </a>
-      <a href="http://jsfiddle.net/user/jlam55555/" class="profileBadge">View my JSFiddles</a>
-      <a href="https://github.com/jlam55555" class="profileBadge">View my GitHub</a>
-      <a href="https://www.codewars.com/users/jlam55555/" class="profileBadge">
-        <img src="https://www.codewars.com/users/jlam55555/badges/micro">
+      <a href="http://jsfiddle.net/user/jlam55555/" class="profileBadge" title="JSFiddle" target="_blank">
+        <i class="fab fa-jsfiddle fa-4x socialMedia" data-fa-transform="shrink-5" data-fa-mask="fas fa-circle"></i>
       </a>
-      <a href="https://projecteuler.net" class="profileBadge">
-        <img src="https://projecteuler.net/profile/jlam55555.png">
+      <a href="https://github.com/jlam55555" class="profileBadge" title="Github" target="_blank">
+        <i class="fab fa-github-alt fa-4x socialMedia" data-fa-transform="shrink-5" data-fa-mask="fas fa-circle"></i>
+      </a>
+      <a href="https://www.codewars.com/users/jlam55555/" class="profileBadge" title="CodeWars" target="_blank">
+        <i class="fas fa-code fa-4x socialMedia" data-fa-transform="shrink-6" data-fa-mask="fas fa-circle"></i>
+      </a>
+      <a href="https://projecteuler.net" class="profileBadge" title="Project Euler" target="_blank">
+        <i class="fas fa-calculator fa-4x socialMedia" data-fa-transform="shrink-6" data-fa-mask="fas fa-circle"></i>
       </a>
     </fieldset>
   </body>
