--- a/index.html
+++ b/index.html
@@ -21,17 +21,7 @@
     <div id="terminal"><strong><span id="greenPrompt">jon@life</span>:<span id="bluePrompt">~</span>$ <span id="dynamicTerminal"></span><span id="cursor">&#9608;</span></strong></div>
     <fieldset id="about">
       <legend>About me</legend>
-      <p>Hi! My name is Jonathan Lam (you may have seen me around under the name jlam55555 or Lambda Ninja). I'm a big fan of writing code, solving Rubik's cubes, and bowling. Here are some major programming projects I've worked on. More to come soon.</p>
-    </fieldset>
-    <fieldset id="majorProjects">
-      <legend>Major projects</legend>
-    </fieldset>
-    <fieldset id="minorProjects">
-      <legend>Smaller and incomplete projects</legend>
-      <p>This was copied over from the old blog. I will soon also be migrating over projects from THL. Pardon the appearance.</p>
-    </fieldset>
-    <fieldset id="contact">
-      <legend>Contact me</legend>
+      <p>Hi! My name is Jonathan Lam (a.k.a. jlam55555 or Lambda Ninja). I'm a big fan of writing code, solving Rubik's cubes, and bowling. Here are some major programming projects I've worked on. More to come soon.</p>
       <p>Ask questions to me on StackOverflow, view my fiddles, view my GitHub, or compete with me on CodeWars or Project Euler. Contact me at <a href="mailto:jonathanlamdev@gmail.com">jonathanlamdev@gmail.com</a>.</p>
       <a href="https://stackoverflow.com/users/2397327/lambda-ninja" class="profileBadge" title="Stack Overflow" target="_blank">
         <i class="fab fa-stack-overflow fa-4x socialMedia" data-fa-transform="shrink-5" data-fa-mask="fas fa-circle"></i>
@@ -49,5 +39,15 @@
         <i class="fas fa-calculator fa-4x socialMedia" data-fa-transform="shrink-6" data-fa-mask="fas fa-circle"></i>
       </a>
     </fieldset>
+    <fieldset id="majorProjects">
+      <legend>Major projects</legend>
+    </fieldset>
+    <fieldset id="minorProjects">
+      <legend>Smaller and incomplete projects</legend>
+      <p>This was copied over from the old blog. I will soon also be migrating over projects from THL. Pardon the appearance.</p>
+    </fieldset>
+    <div id="copyright">
+      &copy; Copyright 2018 Jonathan Lam.
+    </div>
   </body>
 </html>
