added barlow bowling website

--- a/test.html
+++ b/test.html
@@ -1,4 +1,4 @@
-<iframe src="http://fruitsensei.tech" width="500" height="500" scrolling="no"></iframe>
+<iframe src="https://jbhsbowling.github.io/bowlers/Erik Pennell" width="500" height="500" scrolling="no"></iframe>
 <style>
   body, html, iframe {
     margin: 0;
